# CS302_Project_Compress

./: CMakeLists.txt  README.md  bin2number.cpp  get_sample.cpp  main.cpp
Data-Compression/: .gitignore  README.md  test_compress.sh
Data-Compression/first_compress/: CMakeLists.txt  compress_engine_1.cpp  decompress_engine_1.cpp
Data-Compression/first_compress/include/: coding_1.h  frame_io.h  utils.h
Data-Compression/first_compress/src/: coding_1.cpp  frame_io.cpp
Data-Compression/fse_compress/: CMakeLists.txt  fse_alg.hpp  fse_compress.cpp  fse_decompress.cpp  test.sh
Data-Compression/second_compress/: CMakeLists.txt  bitMap_test.cpp  compress_engine_2.cpp  decompress_engine_2.cpp  test.sh
Data-Compression/second_compress/include/: bit_map.h  io_utils.h  lz_alg.h
Data-Compression/second_compress/src/: io_utils.cpp  lz_alg.cpp
Data-Compression/utils/: CMakeLists.txt  bin2int.cpp  getSampleData.cpp
utils/: io.cpp  io.h
